--- a/jenkins-docker/Dockerfile
+++ b/jenkins-docker/Dockerfile
@@ -2,6 +2,15 @@ FROM jenkins/jenkins:lts
 
 USER root
 
+# Install dependencies
+RUN apt-get update && \
+    apt-get install -y curl gnupg2 lsb-release
+
+# Install kubectl
+RUN curl -LO "https://dl.k8s.io/release/$(curl -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
+    chmod +x kubectl && \
+    mv kubectl /usr/local/bin/
+
 # Install Maven
 RUN apt-get update && apt-get install -y maven
 
