--- a/jenkins-docker/Dockerfile
+++ b/jenkins-docker/Dockerfile
@@ -4,15 +4,14 @@ USER root
 
 # Install dependencies
 RUN apt-get update && \
-    apt-get install -y curl gnupg2 lsb-release
+    apt-get install -y curl gnupg2 lsb-release unzip openjdk-17-jdk
 
 # Install kubectl
 RUN curl -LO "https://dl.k8s.io/release/$(curl -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
-    chmod +x kubectl && \
-    mv kubectl /usr/local/bin/
+    chmod +x kubectl && mv kubectl /usr/local/bin/
 
 # Install Maven
-RUN apt-get update && apt-get install -y maven
+RUN apt-get install -y maven
 
 # Install Docker CLI
 RUN apt-get install -y \
@@ -23,7 +22,17 @@ RUN apt-get install -y \
 
 RUN curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg && \
     echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list && \
-    apt-get update && \
-    apt-get install -y docker-ce-cli
+    apt-get update && apt-get install -y docker-ce-cli
+
+# Install Sonar Scanner CLI
+RUN curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip && \
+    unzip sonar-scanner.zip -d /opt && \
+    mv /opt/sonar-scanner-* /opt/sonar-scanner && \
+    ln -s /opt/sonar-scanner/bin/sonar-scanner /usr/local/bin/sonar-scanner && \
+    rm sonar-scanner.zip
+
+# Set environment variables for SonarScanner
+ENV SONAR_SCANNER_HOME=/opt/sonar-scanner
+ENV PATH="$SONAR_SCANNER_HOME/bin:$PATH"
 
 USER jenkins
