--- a/jenkins-docker/Dockerfile
+++ b/jenkins-docker/Dockerfile
@@ -7,8 +7,11 @@ RUN apt-get update && \
     apt-get install -y curl gnupg2 lsb-release unzip openjdk-17-jdk
 
 # Install kubectl
-RUN curl -LO "https://dl.k8s.io/release/$(curl -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
-    chmod +x kubectl && mv kubectl /usr/local/bin/
+RUN KUBECTL_VERSION=$(curl -s https://dl.k8s.io/release/stable.txt) && \
+    curl -LO "https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl" && \
+    chmod +x kubectl && \
+    mv kubectl /usr/local/bin/
+
 
 # Install Maven
 RUN apt-get install -y maven
