--- a/jenkins-docker/Dockerfile
+++ b/jenkins-docker/Dockerfile
@@ -5,12 +5,11 @@ USER root
 # Install dependencies
 RUN apt-get update && \
     apt-get install -y curl gnupg2 lsb-release unzip openjdk-17-jdk
-
-# Install kubectl
-RUN sh -c 'KUBECTL_VERSION=$(curl -s https://dl.k8s.io/release/stable.txt) && \
-    curl -LO "https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl" && \
-    chmod +x kubectl && \
-    mv kubectl /usr/local/bin/'
+    
+#Install Kubectl
+RUN bash -c "KUBECTL_VERSION=$(curl -s https://dl.k8s.io/release/stable.txt) && \
+    curl -LO https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl && \
+    chmod +x kubectl && mv kubectl /usr/local/bin/"
 
 # Install Maven
 RUN apt-get install -y maven
