--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,33 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
- name: my-java-app-deployment
+  name: my-java-app-deployment
 spec:
- replicas: 2
- selector:
-   matchLabels:
-    app: my-java-app
- template:
-  metadata:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: my-java-app
+  template:
+    metadata:
       labels:
         app: my-java-app
-   spec:
-    containers:
-     - name: my-java-app-container
-       image: mallikakannan/hello-java:v1
-       ports: 
-        - containerPort: 8080
-  ---
-  apiVersion: apps/v1
-  kind: Service
-  metadata:
+    spec:
+      containers:
+        - name: my-java-app-container
+          image: mallikakannan/hello-java:v1
+          ports:
+            - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: my-java-app-service
-  spec:
-  type: NodePort # Exposes the service on a static port on the Node
+spec:
+  type: NodePort
   selector:
     app: my-java-app
   ports:
     - protocol: TCP
-      port: 8080       # Port on the service
-      targetPort: 8080 # Port on the container
- 
+      port: 8080
+      targetPort: 8080
