--- a/jenkins-docker/Dockerfile
+++ b/jenkins-docker/Dockerfile
@@ -36,4 +36,9 @@ RUN curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/s
 ENV SONAR_SCANNER_HOME=/opt/sonar-scanner
 ENV PATH="$SONAR_SCANNER_HOME/bin:$PATH"
 
+USER root
+
+# Create and set correct permissions for .kube and .minikube
+RUN mkdir -p /home/jenkins/.kube /home/jenkins/.minikube && \
+    chown -R jenkins:jenkins /home/jenkins/.kube /home/jenkins/.minikube
 USER jenkins
