--- a/2tier/Jenkinsfile
+++ b/2tier/Jenkinsfile
@@ -13,8 +13,10 @@ pipeline {
       }
       stage ('Deploy with docker compose'){
         steps {
-         sh 'docker compose down || true'
-         sh 'docker compose up -d --build'
+          sh '''
+            docker compose -f 2tier/docker-compose.yml down || true
+            docker compose -f 2tier/docker-compose.yml up -d --build
+        '''
         }
       }
     }
